--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "homepage": "https://github.com/muratyasar",
     "license": ["GPL-2.0-or-later"],
     "keywords": ["TYPO3 CMS"],
+    "version": "1.0.0",
     "require": {
         "bk2k/bootstrap-package": "^15.0"
     },
